[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/angelica/Themes/closebutton.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://addons/angelica/fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = -7
font_data = SubResource( 1 )

[node name="SuperButton" type="Node2D"]
script = ExtResource( 1 )

[node name="bbcode" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 28.0
size_flags_horizontal = 5
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[url=superbutton][img]res://addons/angelica/images/16/1f5e8.png[/img][/url]"
meta_underlined = false
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="bbcode" to="." method="_on_bbcode_gui_input"]
[connection signal="meta_clicked" from="bbcode" to="." method="_on_bbcode_meta_clicked"]
[connection signal="meta_hover_ended" from="bbcode" to="." method="_on_bbcode_meta_hover_ended"]
[connection signal="meta_hover_started" from="bbcode" to="." method="_on_bbcode_meta_hover_started"]
[connection signal="mouse_entered" from="bbcode" to="." method="_on_bbcode_mouse_entered"]
